tests/ui/async-await/higher-ranked-auto-trait-8.no_assumptions.stderr
error: higher-ranked lifetime error
  --> $DIR/higher-ranked-auto-trait-8.rs:26:5
   |
LL |     needs_send(use_my_struct(second_struct)); // ERROR
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: could not prove `impl Future<Output = ()>: Send`

error: aborting due to 1 previous error

